--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.10.0",
     "jest-expo": "25.0.0",
+    "react-native-scripts": "1.10.0",
     "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -28,6 +28,7 @@
     "react-native-action-button": "^2.8.4",
     "react-native-config": "^0.11.5",
     "react-native-elements": "^0.19.0",
+    "react-native-flash-message": "^0.1.9",
     "react-native-fontawesome": "^5.7.0",
     "react-native-icons": "^0.7.1",
     "react-native-vector-icons": "^4.5.0",
